# cpp_data_structures

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  _clang-format
.github/workflows/: ci.yml
Source/: OwningPointer.h
Tests/: ArrayTests.cpp  BufferViewTests.cpp  CMakeLists.txt  CircularBufferTests.cpp  ConstructedTests.cpp  CopyOnWriteTests.cpp  FifoTests.cpp  FilteredTests.cpp  FixedDynamicArrayTests.cpp  FlagsTests.cpp  MapVectorTests.cpp  MultiVectorTests.cpp  OwnedVectorTests.cpp  PointersTests.cpp  RawStorageTests.cpp  SmallVectorTests.cpp  StaticVectorTests.cpp  TupleTests.cpp  UtilitiesTests.cpp  ValueTests.cpp  VectorTests.cpp
Tests/Flags/: BoolTests.cpp  CopyableAtomicTests.cpp  LocksTests.cpp  RecursiveSpinLockTests.cpp
Tests/Helpers/: OperationTracker.h
Tests/Pointers/: AnyTests.cpp  CallbackFuncTests.cpp  CloneableTests.cpp  OwningPointerTests.cpp  RefOrOwnTests.cpp  RefTests.cpp
Tests/Structures/: ArrayTests.cpp  BufferViewTests.cpp  CopyOnWriteTests.cpp  FifoTests.cpp  FilteredTests.cpp  FixedDynamicArrayTests.cpp  OwnedVectorTests.cpp  SharedGUIDataTests.cpp  SmallVectorTests.cpp  StaticVectorTests.cpp  VectorTests.cpp
Tests/Utilities/: GenericUtilitiesTests.cpp  MapUtilitiesTests.cpp  StaticObjectsTests.cpp  VectorUtilitiesTests.cpp
Tests/ValueWrapper/: ConstructedTests.cpp  ValueTests.cpp
ea_data_structures/: ea_data_structures.h
ea_data_structures/Allocators/: DefaultAllocators.h  MultiPoolAllocator.h  PMR.h  SmallVectorAllocator.h  StaticVectorAllocator.h
ea_data_structures/Flags/: AtomicHelpers.h  Bool.h  CopyableAtomic.h  Locks.h  RecursiveSpinLock.h  SpinHint.h
ea_data_structures/Pointers/: Any.h  AnyRef.h  CallbackFunc.h  Cloneable.h  DynamicFunc.h  OwningPointer.h  Ref.h  RefOrOwn.h
ea_data_structures/Structures/: Array.h  BufferView.h  CircularBuffer.h  CopyOnWrite.h  Fifo.h  Filtered.h  FixedDynamicArray.h  MapVector.h  MultiVector.h  OwnedVector.h  SharedGUIData.h  SizeType.h  SmallVector.h  SpecialVectors.h  StaticVector.h  Vector.h
ea_data_structures/Utilities/: GenericUtilities.h  MapUtilities.h  StaticObjects.h  TupleUtilities.h  VectorUtilities.h
ea_data_structures/ValueWrapper/: Constructed.h  RawStorage.h  Value.h
tests/: ArrayTests.cpp  CMakeLists.txt  CircularBufferTests.cpp  VectorTests.cpp
